--- a/wisdomCampus/html/studentManage/student-index.html
+++ b/wisdomCampus/html/studentManage/student-index.html
@@ -82,6 +82,10 @@
 				<span class="mui-icon mui-icon-compose"></span>
 				<span id="flag3" class="mui-tab-label">量化考评</span>
 			</a>
+			<a v-show='showPage==1' class="mui-tab-item" href="../../html/studentManage/student-comment.html">
+				<span class="mui-icon mui-icon-compose"></span>
+				<span id="flag4" class="mui-tab-label">评语</span>
+			</a>
 		</nav>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/vue.min.js"></script>
