--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -484,12 +484,12 @@
 								//									}
 								//								}
 								//								if(!isContains) {
-								if(compairTime2(getDate(), stime)) {
-									var nodes = obj.nodeSubJson[index];
-									nodes.attendanceTime = rs.text;
-								} else {
-									mui.toast('时间不能早于当前时间');
-								}
+//								if(compairTime2(getDate(), stime)) {
+								var nodes = obj.nodeSubJson[index];
+								nodes.attendanceTime = rs.text;
+//								} else {
+//									mui.toast('时间不能早于当前时间');
+//								}
 								//								} else {
 								//									mui.toast('不能选择相同时间');
 								//								}
