--- a/wisdomCampus/html/studentManage/student-review.html
+++ b/wisdomCampus/html/studentManage/student-review.html
@@ -214,7 +214,7 @@
 					sClasses:"",//存值用
 					typeValue:"",//存值用
 					typeList:[
-							 {value: '',text: '全部'},
+							 {value: '',text: '全部类型'},
 							 {value: 'termEvaluation',text: '期评'},
 							 {value: 'weekEvaluation',text: '周评'},
 							 {value: 'monthEvaluation',text: '月评'},
