--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -184,6 +184,9 @@
 				margin: 5px 5px 0 10px !important;
 			}
 			/**add*/
+			.mui-table-view-cell.mui-active {
+			    background-color:transparent ;
+			}
 		</style>
 	</head>
 
