--- a/wisdomCampus/html/studentManage/student-index.html
+++ b/wisdomCampus/html/studentManage/student-index.html
@@ -52,10 +52,10 @@
 				background-color: red;
 			}
 
-			.mui-tab-label {
+			/*.mui-tab-label {
 				font-size: 12px;
 				color: #999;
-			}
+			}*/
 		</style>
 	</head>
 
